fix visibility for choises (edit user photo)

--- a/src/components/Acc/AccDetails/UPhoto.module.scss
+++ b/src/components/Acc/AccDetails/UPhoto.module.scss
@@ -32,12 +32,17 @@
       position: absolute;
       background-color: var(--color-board-group-default);
       padding: 1rem;
-      top: 13.5rem;
+      top: 15.2rem;
       left: -2rem;
       display: flex;
       flex-direction: column;
       gap: 1rem;
       border: 2px solid var(--color-board-default);
+
+      @media screen and (max-width: 1200px) {
+        top: 13.5rem;
+        left: -2.5rem;
+      }
 
       &::before {
         content: "";
